# nanoGPT

./: README.md  pyproject.toml  sample.py  tensor_parallel_model.py  tensor_parallel_spd_model.py  train.py
config/: train_gpt2.py
